--- a/index.html
+++ b/index.html
@@ -107,7 +107,24 @@
        <section>
         <h6 id="conviertete">CONVIERTETE EN UN</h6>
         <h2 id="ora2">ORADOR</h2>
+        <h6 id="cuentanos">Anónate como orador para dar una <span id="estil">charla ignite</span>. Cuéntanos de qué quieres hablar!</h6>
        </section>
+       <section class="form">
+        <div class="row">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+            </div>
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="Sobre qué quieres hablar?" id="floatingTextarea2" style="height: 120px"></textarea>
+                <label id="la" for="floatingTextarea2">Sobre qué quieres hablar?</label>
+            </div>
+        </div>
+       
+       </section>
+
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </main>
