--- a/index.html
+++ b/index.html
@@ -109,27 +109,45 @@
         <h2 id="ora2">ORADOR</h2>
         <h6 id="cuentanos">Anónate como orador para dar una <span id="estil">charla ignite</span>. Cuéntanos de qué quieres hablar!</h6>
        </section>
-       <section class="form">
-        <div class="row">
-            <div class="col">
-              <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
-            </div>
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="Sobre qué quieres hablar?" id="floatingTextarea2" style="height: 120px"></textarea>
-                <label id="la" for="floatingTextarea2">Sobre qué quieres hablar?</label>
-            </div>
-        </div>
-       
-       </section>
-
+       <section class="formulario-10">
+            <div class="form-contenedor">
+                <div class="datos">
+                    <div class="nombre">
+                        <input type="hola" class="inombre" placeholder="Nombre">
+                    </div>
+                    <div class="apellido">
+                        <input type="text" class="iapellido" placeholder="Apellido">
+                    </div>
+                </div>
+                <div class="area">
+                    <textarea class="tarea" name="" placeholder="Sobre qué quieres hablar?" id="" cols="50" rows="5"></textarea>
+                </div>
+                <div class="form-parra">
+                    <p id="parrafo-formulario">Recuerda incluir un titulo para tu charla</p>
+                </div>
+                <div class="for-bot">
+                    <button class="botoncito">Enviar</button>
+                </div>
+            <div>
+        </section>
+    
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </main>
     <footer>
-
+        <div class="site-footer">
+            <nav class="footer-nav">
+                <ul class="footer-ul">
+                    <li>Preguntes <br> Frecuentes</li>
+                    <li>Contáctanos</li>
+                    <li>Prensa</li>
+                    <li>Conferencias</li>
+                    <li>Términos y <br>condiciones</li>
+                    <li>Privacidad</li>
+                    <li>Estudianes</li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
