--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="/imagenes/codoacodo.png" alt="Logo" width="100" height="74" class="d-inline-block align-text-center">
                 Conf Bs As
             </a>
@@ -29,7 +29,7 @@
                     <a href="">Conviertete en orador</a>            
                 </li>
                 <li>
-                    <a id="ticket" href="">Comprar ticket</a>
+                    <a id="ticket" href="comprar.html">Comprar ticket</a>
                 </li>
               </ul>
         </div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="botones">
                     <button type="button" class="btn btn-outline-primary" active>Quiero ser orador</button>
-                    <button type="button" class="btn btn-primary" active>Comprar tickets</button>
+                    <button onclick="location.href='comprar.html'" type="button" class="btn btn-primary" active>Comprar tickets</button>
                     
                 </div>
              </div>
